2009-11-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomReturnType.cs: Checked
	  dimensions - fixing bug "Bug 556395 - Exception in
	  DomReturnType.ToInvariantString".

2009-11-17  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Dom/DomReturnType.cs: Remove
	  unnecessary string constructions. StringBuilder can add
	  multiple chars directly.

2009-11-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs: Fixed 'Bug 555523
	  - C# code completion gets confused by extension methods with
	  same names as properties'.

2009-11-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Improve error reporting when a database can't be created.

2009-11-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Projects.csproj:
	* MonoDevelop.Projects/DotNetProjectParameters.cs: Add
	  DotNetProjectParameters.

	* MonoDevelop.Projects/DotNetProject.cs: Implemented
	  StripImplicitNamespace.

	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	  Improve error checking.

2009-11-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/WorkspaceItem.cs:
	* MonoDevelop.Projects/SolutionFolder.cs:
	* MonoDevelop.Projects/SolutionEntityItem.cs: Disable the file
	  system watchers for now.

2009-11-09  Carlo Kok  <ck@remobjects.com>

	* MonoDevelop.Projects.csproj: Fixed project to use the 
	  3.5 msbuild reference.

2009-11-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs: Fixed
	  'Bug 553529 - Stetic created methods are tabbed in too far
	  on windows'.

2009-11-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Text/TextFile.cs: Added support for
	  mac/windows line endings.

2009-11-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: Set a
	  compilation unit for array types.
